# Feynman-Skill

./: .env.example  .gitignore  README.md  README_CN.md  pyproject.toml
.claude/skills/feynman-taste/: SKILL.md
docs/: README_DE.md  README_EN.md  README_FR.md  README_JA.md  skill_publishing_tutorial.docx
feynman_taste/: __init__.py  cli.py
feynman_taste/agents/: taste_agent.py
feynman_taste/config/: settings.py
feynman_taste/core/: evaluator.py  evidence.py  pipeline.py  retriever.py  taste_model.py
feynman_taste/data/: fetcher.py  loader.py  seed_evidence.py
feynman_taste/data/processed/: evidence.json
feynman_taste/data/raw/: feynman_papers.json  wikipedia_detailed.json  wikipedia_feynman.json  wikiquote_feynman.json
feynman_taste/evaluation/: benchmark.py
feynman_taste/skills/: taste_skill.py
feynman_taste/utils/: formatting.py
scripts/: download_real_data.py  fetch_data.py  run_demo_offline.py
tests/: test_evidence.py  test_pipeline.py  test_taste_model.py
