[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feynman-research-taste"
version = "0.1.0"
description = "Evidence-based modeling of Feynman's research taste for scientific hypothesis evaluation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Research Taste Lab"}]

dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pydantic>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "python-docx>=1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.1",
    "jsonlines>=4.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.21", "black>=23.0", "ruff>=0.1", "mypy>=1.5"]

[project.scripts]
feynman-taste = "feynman_taste.cli:main"

[tool.setuptools.packages.find]
include = ["feynman_taste*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
